--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "colors": "^1.4.0",
     "colors.ts": "^1.0.20",
     "express": "^4.17.1",
-    "mongodb": "^4.1.0"
+    "mongodb": "^4.1.0",
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
